# battlesnake-cpp-practice

./: .clang-format  .replit  CMakeLists.txt  README.md  replit.nix
include/: battlesnake.h
src/: battlesnake.cpp  main.cpp
